--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,27 @@
 language: crystal
 
-# Uncomment the following if you'd like Travis to run specs and check code formatting
-# script:
-#   - crystal spec
-#   - crystal tool format --check
+crystal:
+  - latest
+  - nightly
+
+matrix:
+  allow_failures:
+    - crystal: nightly
+
+install:
+  - shards install
+
+script:
+  - crystal spec
+  - crystal tool format --check src spec
+  - bin/ameba src
+  - crystal docs
+
+deploy:
+  github_token: $GITHUB_TOKEN
+  keep_history: true
+  local_dir: docs
+  on:
+    branch: master
+  provider: pages
+  skip_cleanup: true
