--- a/shard.yml
+++ b/shard.yml
@@ -16,6 +16,7 @@ dependencies:
 development_dependencies:
   spec_mirror:
     github: tilishop/spec_mirror.cr
+    version: ~> 0.2.0
   ameba:
     github: crystal-ameba/ameba
     version: ~> 0.14.3
