--- a/shard.yml
+++ b/shard.yml
@@ -1,5 +1,5 @@
 name: lucky_svg_sprite_cli
-version: 0.3.0
+version: 0.3.1
 
 authors:
   - wout <hi@wout.codes>
@@ -26,6 +26,9 @@ development_dependencies:
     version: ~> 0.14
   lucky:
     github:  luckyframework/lucky
+    version: ~> 0.28
+  lucky_cli:
+    github:  luckyframework/lucky_cli
     version: ~> 0.28
 
 scripts:
